zoo/static/css/page_components.css
/* ... */
.moderation form {
	float: left;
	margin-right: 1em;
	margin-top: 1em;
}

.moderation dl {
	margin: 0.8em 0 0 1.385em;
}

.moderation dt,
.moderation dd {
	margin-bottom: 0.4em;
	color: #8A8A8A;
}

/* @end */

/* @group Main photo */

.main-photo {
	border:  2px solid #EBF5FC;
	background-color: white;
	padding: 7px;
	display: block;
	margin: 0 auto;
	max-width: 95%;
	margin-bottom: 1em;
}

/* @group Credit */

.credit {
	padding-left: 90px;
	position: relative;
	padding-bottom: 1em;
	padding-top: 0.1em;
}

.credit img {
	position: absolute;
	top: 0;
	left: 5px;
}

.credit .meta {
	margin: 0;
	padding: 0;
	display: block;
	font-style: normal;
}


/* @end */

/* @end */

/* @group Love this */

.love-this p,
p.love-this,
.love-this h2,
.love-this h3 {
	margin: 0;
	padding: 0;
}
.love-this p,
p.love-this span {
	font-size: 0.8em;
	color: #8C786E;
}
.love-this button:hover p,
p.love-this:hover span {
	color: #534741;
}
p.love-this em {
	font-size:1.5714em;
	line-height:1;
	color:#362F2D;
	font-family:Georgia,"Times New Roman","Century Schoolbook L",Times,serif;
	font-weight:normal;
	font-style: normal;
	display: block;
}
.love-this button,
p.love-this {
	border: 0;
	padding: 0 0 0 37px;
	background-color: #F9FCFE;
	font-weight: normal;
	cursor: pointer;
	width: 100%;
	text-align: left;
	overflow: visible;
	background-image: url(/static/img/icons/heart.png);
	background-position: 0 -165px;
	background-repeat: no-repeat;	
}
p.love-this {
	padding: 0 0 0 40px;
	margin-bottom: 1.125em;
}
.love-this button:hover,
.love-this .remove-from button,
p.love-this:hover {
	background-position: 0 4px;
}
.love-this .remove-from button:hover {
	background-position: 0 -165px;
}
.num-loves p {
	margin: 0;
}
.num-loves {
	font-size: 0.8em;
	overflow: hidden;
	width: 100%;
}
.num-loves strong span {
	float: left;
	font-size: 3em;
	margin-right: 0.2em;
	vertical-align: top;
	font-weight: bold;
	line-height: 0.8em;
}

/* @end */

/* @group Photo listing */

.photo-listing li,
div.photo-listing {
	margin: 0 0 20px 0;
	background: none;
	clear:  both;
	padding: 0 0 10px 90px;
	overflow: hidden;
}

.photo-listing h3 {
	font-family: Calibri,"Helvetica Neue",sans-serif;
	margin: 0;
}

.photo-listing .pull-left {
	float: left;
	display: block;
	width: 75px;
	height: 75px;
	margin: 0 0 0 -90px;
}

.photo-listing p {
	margin: 0.3em 0 0 0;
}

.photo-listing .meta {
	color:  #9FA1A3;
}

.photo-listing .avatar {
	margin-left: 0.1em;
	position: relative;
	top: 4px;
}

/* @end */

/* @group Activity */

.activity,
.activity li {
	list-style-type: none;
	margin: 0;
	padding: 0;
	clear: both;
	overflow: hidden;
}
.activity {
}
.activity li {
	padding: 0 0 20px 70px;
}

.activity h3 {
	font-family: Calibri,"Helvetica Neue",sans-serif;
	margin: 0;
}

.activity .pull-left {
	margin: -5px 5px 0 -70px;
	width: 60px;
}

.activity .pull-left img {
	width: 60px;
}

.activity .wlny {
	margin: 0.3em 5px 0 -70px;
	width: 50px;
}

.activity p {
	margin: 0;
}
.activity p.meta {
	color:  #9FA1A3;
	margin-top: 0.7em;
}

/* @end */

/* @group Best pic */

.bestpic {
	overflow: hidden;
	width: 100%;
	position: relative;
	padding-bottom: 15px;
}
.bestpic .photo1,
.bestpic .photo2 {
	width: 332px;
	height: 332px;
	overflow: hidden;
	background-color: black;
	position: relative;
	text-align: center;
	-webkit-box-shadow: 7px 7px 12px rgba(60, 60, 61, 0.6);
	-moz-box-shadow: 7px 7px 12px rgba(60, 60, 61, 0.6);
	box-shadow: 7px 7px 12px rgba(60, 60, 61, 0.6);
	border: 1px solid black;
	z-index: 2;
}

.bestpic .photo1 {
	float: left;
}
.bestpic .photo2 {
	float: right;
	margin-right: 15px;
}
.bestpic em,
.bestpic .skip:link,
.bestpic .skip:visited,
.bestpic .skip:hover,
.bestpic .skip:focus,
.bestpic .skip:active {
	text-align: center;
	position: absolute;
	left: 50%;
	top: 40%;
	margin-left: -2em;
	background: #AFD580;
	padding: 0.3em 1em 0.35em 1em;
	text-transform: uppercase;
	font-style: normal;
	font-weight: bold;
	color: black;
	text-decoration: none;
	-webkit-border-radius:0.9em;
	-moz-border-radius:0.9em;
	border-radius:0.9em;
	-webkit-box-shadow: 2px 2px 6px rgba(60, 60, 61, 0.9);
	-moz-box-shadow: 2px 2px 6px rgba(60, 60, 61, 0.9);
	box-shadow: 2px 2px 6px rgba(60, 60, 61, 0.9);
	text-shadow: 0px 0px 3px white;
	z-index: 5;
}
.bestpic .skip:link,
.bestpic .skip:visited,
.bestpic .skip:hover,
.bestpic .skip:focus,
.bestpic .skip:active {
	top: inherit;
	background: #B3B5B7;
	bottom: 15px;
	margin-left: -2.25em;
}
.bestpic .skip:hover,
.bestpic .skip:focus,
.bestpic .skip:active {
	-webkit-box-shadow: 1px 1px 3px rgba(60, 60, 61, 0.9);
	-moz-box-shadow: 1px 1px 3px rgba(60, 60, 61, 0.9);
	box-shadow: 1px 1px 3px rgba(60, 60, 61, 0.9);
	background: #A4A6A7;
}
.bestpic .photo1 input,
.bestpic .photo2 input {
	display: block;
	color: black;
	position: absolute;
	left: 50%;
	top: 50%;
	cursor: pointer;
}

/* @end */

/* @group Dev status bar */

.dev-status {
	width: 100%;
	text-align: center;
	padding: 0.3em 0;
	border-bottom: 1px solid black;
	border-top: 1px solid black;
	color: white;
}
.dev-status p {
	margin: 0;
}
.dev-status a {
	color: white;
}
.dev-status.alpha {
	background-color: red;
}
.dev-status.testing {
	background-color: green;
}
.dev-status.localhost {
	background-color: blue;
}
/* @end */

.awards {
	margin-top: 0;
}

.awards p {
	padding-left: 40px;
	background-position: left 0.15em;
	background-repeat: no-repeat;
	padding-bottom: 20px;
	margin: 0;
}

.awards span {
	font-size: 1.5714em;
	font-family: Georgia,"Times New Roman","Century Schoolbook L",Times,serif;
	line-height: 1;
}

.awards em {
	font-size: 0.8em;
	display: block;
	font-style: normal;
	color: #8C786E;
}
.awards:hover em {
	color: #534741;
}

.awards p.award-gold {
	background-image: url(/static/img/icons/award_gold.png);
}

.awards p.award-silver {
	background-image: url(/static/img/icons/award_silver.png);
}

.awards p.award-bronze {
	background-image: url(/static/img/icons/award_bronze.png);
}

